Dont render WebComponents as first category. Also proper fix for overflow

--- a/static/sass/features/feature.scss
+++ b/static/sass/features/feature.scss
@@ -67,5 +67,6 @@ section {
   }
   #content {
     margin: 40px;
+    overflow: initial;
   }
 }
